objects/AssociatedLocation.object
<CustomObject>
    <fields>
        <fullName>Preferred_Contact_Method_2__c</fullName>
        <label>Preferred Contact Method #2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Source__c</fullName>
        <description>a new description</description>
        <label>Account Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Sales_Reps__c</fullName>
        <label>No. of Sales Reps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <description>a new description</description>
        <label>Preferred Contact Method</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <description>a new description</description>
        <label>Number of Employees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Count__c</fullName>
        <label>Employee Count</label>
        <type>TextArea</type>
    </fields>
</CustomObject>